// Copyright (c) Outernet Council and Contributors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package nmts.ek.logical;

option java_package = "org.outernetcouncil.nmts.proto.ek.logical";

// Entity Kind: Network Node (`EK_NETWORK_NODE`)
//
// A logical entity comprising interfaces, routing functions,
// switching functions, etc.
message NetworkNode {
}
